
        * Add magnifier to entry.

2013-06-10  ChunEon Park (Hermet)

        * Remove the keyboard area in the conformant if the keyboard state is off.

2013-06-10  Daniel Juyung Seo (SeoZ)

        * Add "focused" and "unfocused" smart callback for panel, video, web,
        web2, genlist, hover, index, list, map, photocam, progressbar, radio,
        scroller, slider, slideshow, spinner, toolbar, win, calendar, check,
        clock, colorselector, datetime, diskselector, flipselector, gengrid,
        ctxpopup, fileselector_button, naviframe, player, popup, bubble, button.

2013-06-05  Ryuan Choi (ryuan)

        * Fix colorselector send "changed" signal twice when pressed color bar.

2013-06-11  ChunEon Park (Hermet)

        * Keep the smart members of the naviframe views whenever resize object is changed.
		  This prevents the dangling view objects of the naviframe and keep the layer
		  consistency.

2013-06-13  Ryuan Choi (ryuan)

        * Replace uri to url from elm_web_uri_get, elm_web_uri_set and "uri,changed" signal.
        Previous APIs and signal are deprecated.

2013-06-16  ChunEon Park (Hermet)

        * Naviframe: Dont' be popped if the event is freezed and popping is going on.

2013-06-18  Jaehwan Kim

        * In case of scroll in scroll, the child scroller have to bounce if parents don't have a bounce.

2013-06-19  Jaehwan Kim

        * Fix elm_scroller_page_show bug. It have to save the wanted values to show the wanted page.

2013-06-22  Thiep Ha

        * Move cursor when mouse moves with longpress.
        * Show magnifier when selection handlers are pressed or moved.

2013-06-22  ChunEon Park (Hermet)

        * Block mouse events when the ctxpopup on dismiss.

2013-06-23  ChunEon Park (Hermet)

        * Apply current ctxpopup style to the list in the ctxpopup.

2013-06-24  Ryuan Choi (ryuan)

        * fileselector : Add support mime type filter

2013-06-25  Ryuan Choi (ryuan)

        * Fix crash of elm_notify when timeout is zero.